Fix alignment on main components

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,13 +1,14 @@
 .main {
+    height: 90vh;
     display: flex;
     padding: 5vh 5vw;
     background-color: #efefef;
+    position: relative;
 
     .sidebar {
         width: 12%;
         max-width: 12%;
         height: 80vh;
-        margin-top: 6vh;
         background-color: white;
         border-radius: 25px;
         padding: 0 25px;
@@ -24,17 +25,21 @@
     .news {
         width: 55%;
         padding: 0 2vw;
+        position: relative;
 
         .headline {
             height: 5vh;
+            position: absolute;
+            top: -50px;
         }
 
         .news-container {
-            height: 80vh;
+            height: 90vh;
             overflow-y: scroll;
 
             ul {
                 padding: 0;
+                margin-top: 0;
 
                 li {
                     list-style: none;
@@ -44,7 +49,6 @@
     }
 
     .nfl {
-        margin-top: 6vh;
         width: 30%;
         height: 80vh;
         background-color: white;
